--- a/conf-dev.properties
+++ b/conf-dev.properties
@@ -20,6 +20,6 @@ redis_group = 127.0.0.1:6379:shinemoIpo
 online_and_offline_listener_ip = 10.1.80.169
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://111.1.57.148:3306/mpns?autoReconnect=true&amp;failOverReadOnly=false&amp;maxReconnects=10&amp;characterEncoding=UTF8
+jdbc.url=jdbc:mysql://111.1.57.148:3306/mpns?characterEncoding=UTF8
 jdbc.user=root
 jdbc.password=kYCAxx6s9qe90HWnIPxWMQ
