--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,9 @@
         <dal-version>1.0.0</dal-version>
         <core-version>1.0.0</core-version>
         <web-version>1.0.0</web-version>
-        <projectname>data</projectname>
-        <warExplodedDirectory>target/exploded/${projectname}.war</warExplodedDirectory>
-        <envassemblye>assembly.xml</envassemblye>
+        <project.name>mpns</project.name>
         <jackson.version>1.9.13</jackson.version>
-        <mpush-client-version>0.0.0.1</mpush-client-version>
+        <mpush.version>0.0.1</mpush.version>
     </properties>
 
     <dependencyManagement>
@@ -93,11 +91,11 @@
                 <artifactId>spring-core</artifactId>
                 <version>${spring-version}</version>
                 <exclusions>
-        					<exclusion>
-        						<artifactId>commons-logging</artifactId>
-        						<groupId>commons-logging</groupId>
-        					</exclusion>
-        				</exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -151,15 +149,15 @@
             </dependency>
 
             <dependency>
-            	<groupId>commons-beanutils</groupId>
-            	<artifactId>commons-beanutils</artifactId>
-            	<version>1.9.2</version>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>1.9.2</version>
             </dependency>
 
             <dependency>
-                <groupId>com.shinemo.mpush</groupId>
+                <groupId>com.mpush</groupId>
                 <artifactId>mpush-client</artifactId>
-                <version>${mpush-client-version}</version>
+                <version>${mpush.version}</version>
             </dependency>
 
             <dependency>
@@ -187,9 +185,9 @@
                 <version>1.7</version>
             </dependency>
             <dependency>
-              <groupId>org.apache.velocity</groupId>
-              <artifactId>velocity-tools</artifactId>
-              <version>2.0</version>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity-tools</artifactId>
+                <version>2.0</version>
             </dependency>
 
 
@@ -225,9 +223,9 @@
 
 
             <dependency>
-              <groupId>com.google.guava</groupId>
-              <artifactId>guava</artifactId>
-              <version>19.0</version>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>19.0</version>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
@@ -260,9 +258,9 @@
             </dependency>
 
             <dependency>
-            	<groupId>org.apache.commons</groupId>
-            	<artifactId>commons-lang3</artifactId>
-            	<version>3.4</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.4</version>
             </dependency>
 
             <dependency>
@@ -278,34 +276,34 @@
             </dependency>
 
             <dependency>
-              <groupId>com.shinemo.medical</groupId>
-              <artifactId>medical-client</artifactId>
-              <version>1.6.0.3</version>
+                <groupId>com.shinemo.medical</groupId>
+                <artifactId>medical-client</artifactId>
+                <version>1.6.0.3</version>
             </dependency>
 
             <dependency>
-              <groupId>com.fasterxml.jackson.core</groupId>
-              <artifactId>jackson-databind</artifactId>
-              <version>2.6.3</version>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.6.3</version>
             </dependency>
 
             <dependency>
-            	<groupId>commons-codec</groupId>
-            	<artifactId>commons-codec</artifactId>
-            	<version>1.10</version>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.10</version>
             </dependency>
 
 
             <dependency>
-              <groupId>javax.servlet</groupId>
-              <artifactId>javax.servlet-api</artifactId>
-              <version>3.0.1</version>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.0.1</version>
             </dependency>
 
             <dependency>
-            	<groupId>com.lmax</groupId>
-            	<artifactId>disruptor</artifactId>
-            	<version>3.3.2</version>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>3.3.2</version>
             </dependency>
 
             <dependency>
@@ -315,27 +313,27 @@
             </dependency>
 
             <dependency>
-            	<groupId>io.netty</groupId>
-            	<artifactId>netty-all</artifactId>
-            	<version>5.0.0.Alpha1</version>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>5.0.0.Alpha1</version>
             </dependency>
 
             <dependency>
-            	<groupId>com.caucho</groupId>
-            	<artifactId>hessian</artifactId>
-            	<version>4.0.38</version>
+                <groupId>com.caucho</groupId>
+                <artifactId>hessian</artifactId>
+                <version>4.0.38</version>
             </dependency>
 
             <dependency>
-              <groupId>org.apache.poi</groupId>
-              <artifactId>poi</artifactId>
-              <version>3.9</version>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.9</version>
             </dependency>
 
             <dependency>
-               <groupId>eu.bitwalker</groupId>
-               <artifactId>UserAgentUtils</artifactId>
-               <version>1.18</version>
+                <groupId>eu.bitwalker</groupId>
+                <artifactId>UserAgentUtils</artifactId>
+                <version>1.18</version>
             </dependency>
 
             <dependency>
@@ -355,67 +353,67 @@
                 <artifactId>dubbo</artifactId>
                 <version>2.8.4</version>
                 <exclusions>
-                  <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                  </exclusion>
-                  <exclusion>
-                    <artifactId>log4j</artifactId>
-                    <groupId>log4j</groupId>
-                  </exclusion>
-                  <exclusion>
-                    <artifactId>curator-framework</artifactId>
-                    <groupId>org.apache.curator</groupId>
-                  </exclusion>
-                  <exclusion>
-                    <artifactId>curator-client</artifactId>
-                    <groupId>org.apache.curator</groupId>
-                  </exclusion>
-                  <exclusion>
-                    <artifactId>javassist</artifactId>
-                    <groupId>org.javassist</groupId>
-                  </exclusion>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>log4j</artifactId>
+                        <groupId>log4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>curator-framework</artifactId>
+                        <groupId>org.apache.curator</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>curator-client</artifactId>
+                        <groupId>org.apache.curator</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>javassist</artifactId>
+                        <groupId>org.javassist</groupId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
-            	<groupId>org.javassist</groupId>
-            	<artifactId>javassist</artifactId>
-            	<version>3.20.0-GA</version>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.20.0-GA</version>
             </dependency>
 
             <dependency>
-              <artifactId>zookeeper</artifactId>
-              <groupId>org.apache.zookeeper</groupId>
-              <version>3.4.6</version>
-              <exclusions>
-                <exclusion>
-                  <artifactId>slf4j-log4j12</artifactId>
-                  <groupId>org.slf4j</groupId>
-                </exclusion>
-                <exclusion>
-                  <artifactId>io.netty</artifactId>
-                  <groupId>netty</groupId>
-                </exclusion>
-              </exclusions>
+                <artifactId>zookeeper</artifactId>
+                <groupId>org.apache.zookeeper</groupId>
+                <version>3.4.6</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>slf4j-log4j12</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>io.netty</artifactId>
+                        <groupId>netty</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
-            	<groupId>cn.jpush.api</groupId>
-            	<artifactId>jpush-client</artifactId>
-            	<version>3.2.8</version>
+                <groupId>cn.jpush.api</groupId>
+                <artifactId>jpush-client</artifactId>
+                <version>3.2.8</version>
             </dependency>
 
 
             <dependency>
-              <groupId>com.github.sgroschupf</groupId>
-              <artifactId>zkclient</artifactId>
-              <version>0.1</version>
-              <exclusions>
-                <exclusion>
-                  <artifactId>zookeeper</artifactId>
-                  <groupId>org.apache.zookeeper</groupId>
-                </exclusion>
-              </exclusions>
+                <groupId>com.github.sgroschupf</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>0.1</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>zookeeper</artifactId>
+                        <groupId>org.apache.zookeeper</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
         </dependencies>
@@ -423,65 +421,65 @@
 
     <!-- 编译配置 -->
     <build>
-      <!-- 指定编译时的Resource目录 -->
-      <resources>
-          <resource>
-              <directory>src/main/resources</directory>
-              <includes>
-                  <include>**/*.xml</include>
-              </includes>
-              <filtering>true</filtering>
-          </resource>
-      </resources>
+        <!-- 指定编译时的Resource目录 -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 
-      <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.1</version>
-              <configuration>
-                  <source>1.7</source>
-                  <target>1.7</target>
-                  <encoding>UTF-8</encoding>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-resources-plugin</artifactId>
-              <version>2.6</version>
-          </plugin>
-      </plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+        </plugins>
 
     </build>
 
     <profiles>
-      <profile>
-        <id>daily</id>
-        <properties>
-          <deploy.env>daily</deploy.env>
-        </properties>
-      </profile>
-      <profile>
-        <id>dev</id>
-        <properties>
-          <deploy.env>dev</deploy.env>
-        </properties>
-        <activation>
-          <activeByDefault>true</activeByDefault>
-        </activation>
-      </profile>
-      <profile>
-        <id>pre</id>
-        <properties>
-          <deploy.env>pre</deploy.env>
-        </properties>
-      </profile>
-      <profile>
-        <id>online</id>
-        <properties>
-          <deploy.env>online</deploy.env>
-        </properties>
-      </profile>
+        <profile>
+            <id>daily</id>
+            <properties>
+                <deploy.env>daily</deploy.env>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <deploy.env>dev</deploy.env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>pre</id>
+            <properties>
+                <deploy.env>pre</deploy.env>
+            </properties>
+        </profile>
+        <profile>
+            <id>online</id>
+            <properties>
+                <deploy.env>online</deploy.env>
+            </properties>
+        </profile>
     </profiles>
 
 </project>
