--- a/mpns-web/src/main/resources/application.conf
+++ b/mpns-web/src/main/resources/application.conf
@@ -1,4 +1,4 @@
 mp.log.dir=${log.home}
 mp.log.level=${log.root.level}
 mp.zk.namespace=mpush
-mp.zk.server-address="10.0.10.47:2181"
+mp.zk.server-address="${zk.server}"
