mpush client 升级到0.0.6

--- a/conf/conf-dev.properties
+++ b/conf/conf-dev.properties
@@ -2,3 +2,5 @@ log.home=/tmp/logs/mpns/
 log.root.level=debug
 http.server.port=8080
 zk.server=127.0.0.1:2181
+redis.nodes="127.0.0.1:6379"
+redis.password=
