--- a/conf/conf-daily.properties
+++ b/conf/conf-daily.properties
@@ -1,4 +1,6 @@
 log.home=/tmp/logs/mpns
 log.root.level=debug
 http.server.port=8080
-zk.server=127.0.0.1:2181
+zk.server=10.0.10.47:2181
+redis.nodes="10.0.10.53:6379"
+redis.password=
