--- a/mpns-web/src/main/resources/application.conf
+++ b/mpns-web/src/main/resources/application.conf
@@ -2,7 +2,7 @@ mp.log-dir=${log.home}
 mp.log-level=${log.root.level}
 mp.log-conf-path=logback.xml
 mp.zk.server-address="${zk.server}"
-mp.net.gateway-server-net=udp // 网关服务使用的网络 udp/tcp
+mp.net.gateway-server-net=tcp // 网关服务使用的网络 udp/tcp
 mp.redis {// redis 集群配置
     password:"${redis.password}"
     nodes:[${redis.nodes}] //格式是ip:port
